Fix z-index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,4 +25,8 @@ h1 {
   line-height: 2px;
 }
 
+a:hover, a:visited, a:active {
+  text-decoration: none;
+}
+
 
