--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -32,7 +32,8 @@ body {
   height: 100%;
   top: 0;
   left: 0;
-  background-color: transparentize($green, 0.05)
+  background-color: transparentize($green, 0.05);
+  z-index: -2;
 }
 
 .white-background {
